--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "description": "",
   "dependencies": {
     "fs-extra": "^11.1.0",
-    "solc": "^0.8.19"
+    "mocha": "^10.2.0",
+    "solc": "^0.8.19",
+    "web3": "^1.8.2",
+    "web3-mocha-ui": "^0.1.1"
   }
 }
