--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "fs-extra": "^11.1.0",
+    "ganache-cli": "^6.12.2",
     "mocha": "^10.2.0",
     "solc": "^0.8.19",
     "web3": "^1.8.2",
